services and controller refactoring + add guest feature